@@ -1,0 +1,46 @@
+class Opinio::CommentsController < ApplicationController
+  include Opinio::Controllers::InternalHelpers
+  include Opinio::Controllers::Replies if Opinio.accept_replies
+
+  def index
+    @comments = resource.comments.page(params[:page])
+  end
+
+  def create
+    @comment = resource.comments.build(params[:comment])
+    @comment.owner = send(Opinio.current_user_method)
+    @comment.user_ip = request.remote_ip.to_s if @comment.respond_to?(:user_ip)
+    @comment.user_agent = request.user_agent.to_s if @comment.respond_to?(:user_agent)
+
+    if @comment.save
+      messages = { :notice => t('opinio.messages.comment_sent') }
+    else
+      messages = { :error => t('opinio.messages.comment_sending_error') }
+    end
+
+    respond_to do |format|
+      format.js
+      format.html { redirect_to( resource, :flash => messages ) }
+    end
+  end
+
+  def destroy
+    @comment = Opinio.model_name.constantize.find(params[:id])
+
+    if can_destroy_opinio?(@comment)
+      @comment.destroy
+      flash[:notice] = t('opinio.messages.comment_destroyed')
+    else
+      #flash[:error]  = I18n.translate('opinio.comment.not_permitted', :default => "Not permitted")
+      logger.warn "user #{send(Opinio.current_user_method)} tried to remove a comment from another user #{@comment.owner.id}"
+      render :text => "unauthorized", :status => 401 and return
+    end
+
+    respond_to do |format|
+      format.js
+      format.html { redirect_to( @comment.commentable ) }
+    end
+  end
+
+  
+end
