@@ -1,1 +1,4 @@
-<%= comments_for @item %>
+<div class="comments">
+  <h3>Comments</h3>
+  <%= comments_for @item %>
+</div>
