@@ -1,18 +1,22 @@
 <div id="new_comment">
-  <% if send(Opinio.current_user_method) %>
-    <h3>Send Comments</h3>
+  <% if current_user or current_admin_user %>
+    <h3>Your Comment</h3>
     <%= form_for Comment.new, :remote => true do |f| %>
       <p>
-        <%= f.label :body, "Comment" %>
-        <%= f.text_area :body, :id => "Comment" %>
+        <%= f.text_area :body, :rows => 8, :id => "Comment", :class=> "input-xlarge" %>
       </p>
       <%= hidden_field_tag :commentable_id, commentable.id %>
       <%= hidden_field_tag :commentable_type, commentable.class.base_class.name.to_s %>
-      <%= f.submit "Send Comment" %>
+      <div class="form-actions">
+        <%= f.submit "Send Comment", :class => "btn primary", :disable_with => 'Sending...' %>
+      </div>
+      
     <% end %>
   <% else %>
     <p>
-      Must be logged in to comment.
+      Must be 
+      <%= link_to "logged in", new_session_url(:user, :protocol => 'https'), :title => "Login" %>
+       to comment.
     </p>
   <% end %>
 </div>
